# Go2_DRL_nav

./: .gitignore  README.md  command.sh
src/go2_agent/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/go2_agent/go2_agent/: Go2CmdVelNode.py  HdistToGoal.py  agent_3_receive.py  agent_3_receive_betterone.py  agent_3_service.py  agent_3_service_fastbin.py  agent_3_service_lean.py  agent_3_service_new.py  agent_3_service_new_2.py  agent_3_service_node.py  cmd_vel_forwarder.py  gesture_control.py  go2_pose_command.py  off_policy copy.py  off_policy.py  td3_algrithm.py  td3_enhance_cnn.py  td3_mini_cnn.py  td3_xy.py
src/go2_agent/go2_agent/model/td3_21/: stage7_agent_ep21000.pt
src/go2_agent/resource/: go2_agent
src/go2_cmd_processor/: package.xml  setup.cfg  setup.py
src/go2_cmd_processor/go2_cmd_processor/: go2_service_client.py  keyboard_teleop copy.py  keyboard_teleop.py  sport_ctrl.py
src/pointcloud_to_laserscan/: CMakeLists.txt  package.xml
src/pointcloud_to_laserscan/config/autonomy/: navigation.yaml
src/pointcloud_to_laserscan/launch/: Hesai_pointcloud_to_laserscan_launch.py  copy?pointcloud_to_laserscan_launch copy.py  pointcloud_crop_launch.py  pointcloud_filter.launch.py  pointcloud_to_laserscan_launch.py  pointcloud_to_scan_launch.py  slam.launch.py
src/pointcloud_to_laserscan/src/: PointCloudCropNode.cpp  PointCloudFilterNode.cpp  laserscan_to_pointcloud_node.cpp  pointcloud_to_laserscan_node.cpp  pointcloud_to_scan_node.cpp
